[package]
name = "cumulus-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

#links = "parity-util-mem-ban-duplicates"


[dependencies]
# Other dependencies
#parity-util-mem = { version = "0.9.0", features = ["jemalloc-global"], default-features = false }
#pum = { package = "parity-util-mem", version = "0.9.0", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [ "derive" ] }
hash-db = { version = "0.15.2", default-features = false }
memory-db = { version = "0.26.0", default-features = false }
trie-db = { version = "0.22.0", default-features = false }

# Cumulus dependencies
cumulus-primitives = { path = "../primitives", default-features = false }

# Substrate dependencies
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-trie = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-externalities = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

# Polkadot dependencies
parachain = { package = "polkadot-parachain", git = "https://github.com/paritytech/polkadot", default-features = false, features = [ "wasm-api" ], branch = "master" }

#S
pallet-democracy =  { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-treasury =  { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-collective =  { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
frame-benchmarking =  { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "master" } 
frame-support =  { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
frame-system =  { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-balances =  { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-scheduler =  { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-storage =  { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
substrate-test-utils =  { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
hex-literal = "0.3.1"

[dev-dependencies]
sc-client-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "master" }
cumulus-test-relay-sproof-builder = { path = "../test/relay-sproof-builder" }
cumulus-test-client = { path = "../test/client" }
env_logger = "0.7.1"


[features]
default = ["std"]
std = [
	"serde",
	"frame-support/std",
	"frame-system/std",
	"codec/std",
	"cumulus-primitives/std",
	"sp-std/std",
	"sp-io/std",
	#"sp-runtime/std",
	"sp-core/std",
	"frame-executive/std",
	"memory-db/std",
	"hash-db/std",
	"trie-db/std",
	"sp-state-machine/std",
	"sp-externalities/std",
	"sp-trie/std",
	"parachain/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	#"sp-runtime/runtime-benchmarks",
]